--- a/frontendAplicacion/AplicacionQR/package.json
+++ b/frontendAplicacion/AplicacionQR/package.json
@@ -13,11 +13,16 @@
     "expo": "^31.0.2",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "react-native-barcodescanner": "^3.1.1",
     "react-native-camera": "^1.3.1",
     "react-native-elements": "^0.19.1",
     "react-native-keyboard-aware-scroll-view": "^0.7.4",
     "react-native-permissions": "^1.1.1",
-    "react-native-vector-icons": "^6.0.2"
+    "react-native-qrcode-scanner": "^1.1.0",
+    "react-native-router-flux": "^4.0.6",
+    "react-native-social-share": "^1.6.3",
+    "react-native-vector-icons": "^6.0.2",
+    "react-navigation": "^2.18.2"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
