--- a/frontendAplicacion/AplicacionQR/app.json
+++ b/frontendAplicacion/AplicacionQR/app.json
@@ -21,7 +21,11 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "R.DevF.exp.exponent"
+    },
+    "android": {
+      "package": "DevF.exp.exponent"
     }
   }
 }
